neue Massage Texte, neue Bilder und Anpassungen von Massage Texten

--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -29,18 +29,18 @@ import Footer from "../components/Footer.astro";
         <CardMassageReverse
           reverseMassageCardId="relaxing"
           collapseLinkIdRev="collapse2"
-          imgPathRev="/img/massage2-opt.jpg"
+          imgPathRev="/img/entspannungsmassage.jpg"
           hrefRev="#"
           titleRev="Entspannungsmassage"
           bodyRev1={[
-            "Als Entspannungsmassage wird eine Massage bezeichnet, die nicht aus medizinischen Gründen durchgeführt wird, sondern ausschliesslich der Entspannung dient. Sie dient vor allem zum Abbau von Stress auf geistiger und körperlicher Ebene und zur Steigerung des Wohlbefindens.",
+            "Als Entspannungsmassage wird eine Massage bezeichnet, die nicht aus medizinischen Gründen durchgeführt wird, sondern ausschliesslich der Entspannung dient. Sie dient vor allem zum Abbau von Stress auf geistiger und körperlicher Ebene und zur Steigerung des Wohlbefindens.</p></br><p>Bei einer Entspannungsmassage, die man auch Anti-Stress oder Relax Massage nennt, werden gleichmässig langsame und rhythmische Bewegungen vorgenommen, mit dessen Hilfe sich Geist, Körper und Seele wieder erholen können.",
           ]}
-          bodyRev2="<p>Dabei können unterschiedliche Massagetechniken zum Einsatz kommen. Bei einer Entspannungsmassage besteht das Ziel</p><ul><li>Verspannungen zu lösen</li><li>Muskelermüdung zu lindern</li><li>Müdigkeit abzubauen</li><li>Sich zu entspannen</li><li>Den Muskeltonus zu erhöhen oder zu verringern</li><li>Schmerzen zu reduzieren</li><li>Verletzungen zu beseitigen</li><li>Die Durchblutung und den Lymphfluss zu verbessern</li><li>den Stoffwechsel beschleunigen</li><li>den Hautzustand zu verbessern</li><li>Den Körper zu verjüngen.</li></ul><p>Bei einer Entspannungsmassage, die man auch Anti-Stress oder Relax Massage nennt, werden gleichmäßig langsame und rhythmische Bewegungen vorgenommen, mit dessen Hilfe sich Geist, Körper und Seele wieder erholen können.</p><br/><p>Die Indikationen umfassen Gelenkerkrankungen (Arthrose, Osteochondrose und andere), Muskelatonie, chronische Müdigkeit, Schmerzen, erhöhte Nervenreizbarkeit, Schlafstörungen, Neurosen, Stress, Depressionen, Übergewicht, Cellulite, Fibrose, Ödeme, Hypertonizität der Muskeln.</p>"
+          bodyRev2="<p>Dabei können unterschiedliche Massagetechniken zum Einsatz kommen. Bei einer Entspannungsmassage besteht das Ziel</p><ul><li>Verspannungen zu lösen</li><li>Muskelermüdung zu lindern</li><li>Müdigkeit abzubauen</li><li>Sich zu entspannen</li><li>Den Muskeltonus zu erhöhen oder zu verringern</li><li>Schmerzen zu reduzieren</li><li>Verletzungen zu beseitigen</li><li>Die Durchblutung und den Lymphfluss zu verbessern</li><li>den Stoffwechsel beschleunigen</li><li>den Hautzustand zu verbessern</li><li>Den Körper zu verjüngen.</li></ul><p>Die Indikationen umfassen Gelenkerkrankungen (Arthrose, Osteochondrose und andere), Muskelatonie, chronische Müdigkeit, Schmerzen, erhöhte Nervenreizbarkeit, Schlafstörungen, Neurosen, Stress, Depressionen, Übergewicht, Cellulite, Fibrose, Ödeme, Hypertonizität der Muskeln.</p>"
         />
         <CardMassage
           massageCardId="sport"
           collapseLinkId="collapse3"
-          imgPath1="/img/massage3-opt.jpg"
+          imgPath1="/img/sportmassage.jpg"
           href1="#"
           title1="Sportmassage"
           body1={[
@@ -51,7 +51,7 @@ import Footer from "../components/Footer.astro";
         <CardMassage
           massageCardId="fussreflexzonen"
           collapseLinkId="collapse4"
-          imgPath1="/img/Fussrefelxzonenmassage.jpg"
+          imgPath1="/img/Fussreflexzonenmassage.jpg"
           href1="#"
           title1="Flussreflexzonen Massage"
           body1={[
@@ -59,6 +59,27 @@ import Footer from "../components/Footer.astro";
           ]}
           body2="<p>Alle Körperteile sind der Lehre nach miteinander verbunden. Der menschliche Körper spiegelt sich im Fuss wider – wie auf einer kleinen Landkarte lassen sich dort der Körper und seine Beschwerden erkennen. Demzufolge können durch gezielte Druckmassagen an speziellen Stellen am Fuss körperliche und seelische Beschwerden im restlichen Körper gelöst werden und Selbstheilungskräfte aktivieren.</p></br><p>Einzelne Behandlungen können helfen und das Wohlbefinden im Körper steigern, gegen chronische Beschwerden können regelmässige Massagen aber wirkungsvoller sein.</p></br><p>Die Fussreflexzonentherapie kann bei folgenden Beschwerden eingesetzt werden:</p><ul><li>Gelenkschmerzen</li><li>Wirbelsäulenleiden</li><li>Verspannungen</li><li>Verkrampfungen</li><li>Schlafstörungen</li><li>Durchblutungsstörungen</li><li>Kopfschmerzen</li><li>Migräne</li><li>Kreislaufstörungen</li><li>Verdauungsbeschwerden</li><li>Blasenentzündungen</li><li>Heuschnupfen</li><li>Erkältungen</li><li>Zyklusstörungen</li></ul><p>Die Reflexzonenmassage kann aber auch präventiv eingesetzt werden und eine allgemeine gesundheitliche Stärkung erzielen.</p></br><p>Aber in gewissen Fällen ist es ratsam auf eine Fussreflexmassage zu verzichten. So etwa bei Risikoschwangerschaften, akuten Entzündungen, Fieber oder Psychosen.</p>"
         />
+        <CardMassage
+          massageCardId="lymphdrainage"
+          collapseLinkId="collapse5"
+          imgPath1="/img/lymphdrainage.png"
+          href1="#"
+          title1="Manuelle Lymphdrainage"
+          body1={[
+            "Die manuelle Lymphdrainage ist keine klassische Massage, sondern vielmehr eine Drainage, welche die Funktion des Lymphsystems positiv beeinflusst. Das genaue Ziel der manuellen Lymphdrainage ist die Entstauung des geschwollenen Gewebes. Durch sanfte, oberflächliche Anwendungen, werden bei der Therapie die Lymphflüssigkeiten verschoben und der Lymphabfluss aktiviert.",
+          ]}
+          body2="<p>Die Manuelle Lymphdrainage eignet sich vor allem bei Beschwerden wie Schwellungen und Stauungen. Beispiele dafür sind Verstauchungen, Zerrungen, Blutergüsse, Knochenbrüche, Ödeme bei rheumatischen Erkrankungen oder Lymphödeme. Die Drainage regt den Abfluss von Flüssigkeiten an und verhindert gleichzeitig, dass neue Flüssigkeit in das Gewebe gelangt. Schmerzen in der betreffenden Gegend können so gelindert und der Heilungsprozess beschleunigt werden.</p></br><p>Auch Beschwerden wie Wassereinlagerungen zählen zu den typischen Anwendungsgebieten der manuellen Lymphdrainage. Schwangere Frauen und ältere Menschen sind besonders häufig von solchen Einlagerungen in Armen und Beinen betroffen.</p></br><p>Die manuelle Lymphdrainage kommt ausserdem nach Operationen zum Einsatz. Zum Beispiel nach Unfällen, nach der Entfernung der Lymphknoten oder nach zahnärztlichen Eingriffen. Operationsbedingte Schwellungen können mit den sanften Grifftechniken der manuellen Lymphdrainage besonders wirksam behandelt werden.</p></br><p>Auch chronische Erkrankungen im Hals-, Nasen- und Ohrenbereich sowie Gelenkerkrankungen (wie Morbus Sudeck), können mit der manuellen Lymphdrainage therapiert werden.</p></br><p>Hinweis: Bei Beschwerden wie Herzschwäche, Venenthrombose, akuten Ekzemen oder offenen Wunden und ähnlichen Beschwerden, kommt die manuelle Lymphdrainage nur nach Absprache mit dem behandelnden Arzt zum Einsatz.</p>"
+        />
+        <CardMassage
+          massageCardId="rebalancing"
+          collapseLinkId="collapse6"
+          imgPath1="/img/rebalancingmassage.jpg"
+          href1="#"
+          title1="Rebalancing"
+          body1={[
+            "Rebalancing bedeutet wieder ins Gleichgewicht zu gelangen. Rebalancing ist eine ganzheitliche, integrative Massage- und Körpertherapie. Die Methode kombiniert auf einzigartige Weise achtsame Berührung, gezielte manuelle Arbeit am faszialen Bindegewebe (Striche), Gespräche, Gelenklockerungen (Joint Release) sowie die Schulung und Verfeinerung der Körperwahrnehmung durch sogenanntes Körperlesen  erbessern.",
+          ]}
+          body2="<p>Durch die tiefgehende strukturelle Faszienbehandlung werden verspannte und verfilzte Bindegewebsverbände gelöst. Schmerzen können sich verändern, der Körper kann sich neu ausrichten und leichter in die Aufrichtung kommen.</p></br><p>Der Bewegungsspielraum erweitert sich, Bewegungsabläufe werden geschmeidiger, und die Körperwahrnehmung wird verfeinert.</p></br><p>So wird eine Neuausrichtung auf allen Ebenen – körperlich, seelisch und geistig – unterstützt, wodurch eine neue äussere und innere Haltung entstehen kann.</p>"
       </div>
       <!-- contraindications -->
       <div class="contradict-section">
