Anpassung Bilder und Ansicht Massage Text, Anpassung Kontakte Google Maps Reihenfolge

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -51,6 +51,54 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             <Icon name="fa-solid:home" class="addr-icon home-icon" />
             <div>
               <div class="addr-place">
+                <p>Dopamin Praxis</p>
+              </div>
+              <p>
+                <a
+                  href="https://maps.app.goo.gl/SCCjyYHtdvUu1VrC8"
+                  target="_blank"
+                >
+                  Schaffhauserstrasse 22
+                </a>
+              </p>
+              <p>
+                <a
+                  href="https://maps.app.goo.gl/SCCjyYHtdvUu1VrC8"
+                  target="_blank"
+                >
+                  8302 Kloten
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="icon-text">
+            <Icon name="fa-solid:phone-alt" class="addr-icon" />
+            <a href="tel:+41795648109" target="_blank"> +41 (0)79 564 81 09</a>
+          </div>
+          <div class="icon-text icon-text-last">
+            <Icon name="fa-solid:envelope" class="addr-icon" />
+            <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
+              elena_schaller@swissonline.ch
+            </a>
+          </div>
+        </div>
+
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5402.285394162768!2d8.536749011745686!3d47.38964860281397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900a73bb38e23f%3A0x62051d986dc3f86b!2sSchaffhauserstrasse%2022%2C%208006%20Z%C3%BCrich!5e0!3m2!1sru!2sch!4v1751212546367!5m2!1sru!2sch"
+          width="500"
+          height="300"
+          style="border:0;border-radius: 4px;"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+
+      <div class="address-map">
+        <div class="addr-item1">
+          <div class="icon-text">
+            <Icon name="fa-solid:home" class="addr-icon home-icon" />
+            <div>
+              <div class="addr-place">
                 <p>Praxisraum</p>
                 <p>in Weiach</p>
               </div>
@@ -86,55 +134,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-
-      <div class="address-map">
-        <div class="addr-item1">
-          <div class="icon-text">
-            <Icon name="fa-solid:home" class="addr-icon home-icon" />
-            <div>
-              <div class="addr-place">
-                <p>Dopamin Praxis</p>
-              </div>
-              <p>
-                <a
-                  href="https://maps.app.goo.gl/gLepPp13qAveDrgD7"
-                  target="_blank"
-                >
-                  Schaffhauserstrasse 22
-                </a>
-              </p>
-              <p>
-                <a
-                  href="https://maps.app.goo.gl/gLepPp13qAveDrgD7"
-                  target="_blank"
-                >
-                  8302 Kloten
-                </a>
-              </p>
-            </div>
-          </div>
-          <div class="icon-text">
-            <Icon name="fa-solid:phone-alt" class="addr-icon" />
-            <a href="tel:+41795648109" target="_blank"> +41 (0)79 564 81 09</a>
-          </div>
-          <div class="icon-text icon-text-last">
-            <Icon name="fa-solid:envelope" class="addr-icon" />
-            <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
-              elena_schaller@swissonline.ch
-            </a>
-          </div>
-        </div>
-
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5402.285394162768!2d8.536749011745686!3d47.38964860281397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900a73bb38e23f%3A0x62051d986dc3f86b!2sSchaffhauserstrasse%2022%2C%208006%20Z%C3%BCrich!5e0!3m2!1sru!2sch!4v1751212546367!5m2!1sru!2sch"
-          width="500"
-          height="300"
-          style="border:0;border-radius: 4px;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-
+      
       <div class="address-map">
         <div class="addr-item2">
           <div class="icon-text">
