--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -49,15 +49,15 @@ import Footer from "../components/Footer.astro";
           body2="<p>Die Sportmassage sorgt für:</p><ul><li>die Aktivierung des Kreislaufsystems</li><li>die Erhöhung der Sauerstoffzufuhr</li><li>die verbesserte Ableitung von Schlacken</li><li>die Vermeidung einer zu schnellen Ermüdung</li><li>die Beseitigung von Schmerzen durch überbeanspruchte Muskeln</li><li>die Beschleunigung den Heilungsprozess bei Verletzungen</li><li>die Steigerung des Wohlbefindens</li><li>die Aktivierung des zentralen Nervensystems</li></ul><p>Bei einer Sportmassage unterscheidet man zwischen der Vorbereitungsmassage, der Trainingsmassage, der Zwischenmassage sowie der Regenerationsmassage.</p></br><p>Da die Sportmassage auch den Effekt eines Aufwärmens hat, wird auf diese Weise auch möglichen Verletzungen beim Sport vorgebeugt. Im Anschluss an die sportliche Aktivität soll die Sportmassage dazu beitragen, einen schmerzhaften Muskelkater zu unterbinden. Nach den sportlichen Belastungen wird der Körper durch die Anwendung von bestimmten Griffen behandelt, umso besser regenerieren zu können. Sie dient zum raschen Abbau von Stoffwechselschlacken, damit diese sich nicht im Muskelgewebe festsetzen. Zudem soll die Leistungsfähigkeit des Sportlers erhöht werden.</p></br><p>Doch nicht nur für Leistungssportler ist eine Sportmassage geeignet. Auch für Freizeitsportler oder für Alltag und Berufsleben kann eine solche Massage von Vorteil sein, da sie eine positive Wirkung auf die Muskulatur hat und verkrampfte und überdehnte Muskeln entspannt. Zudem werden unterforderte Muskeln und Gewebe angeregt sowie die Sauerstoffversorgung verbessert.</p></br><p>Neben Sportlern können auch Menschen, die aufgrund von falscher Sitzhaltung, langem Autofahren, langer Arbeit am Schreibtisch bzw. Computer unter</p><ul><li>Rückenschmerzen</li><li>Nackenschmerzen</li><li>Stress</li></ul><p>leiden, von einer Sportmassage profitieren, da die Massage gezielt die dadurch entstehenden Verklebungen und Verspannungen behandelt.</p>"
         />
         <CardMassage
-          massageCardId="fussreflexzonen"
-          collapseLinkId="collapse4"
-          imgPath1="/img/Fussreflexzonenmassage.jpg"
-          href1="#"
-          title1="Flussreflexzonen Massage"
-          body1={[
+          reverseMassageCardId="fussreflexzonen"
+          collapseLinkIdRev="collapse4"
+          imgPathRev="/img/Fussreflexzonenmassage.jpg"
+          hrefRev="#"
+          titleRev="Flussreflexzonen Massage"
+          bodyRev1={[
             "Die Fussmassage kann das allgemeine Wohlbefinden im ganzen Körper verbessern. Das liegt daran, dass die Reflexzonentherapie entspannend wirkt und Blockaden im ganzen Körper lösen kann. Gerade bei schlechter Stimmung oder psychischen Belastungen zeigt sich die Reflexzonenmassage deshalb als positiv.",
           ]}
-          body2="<p>Alle Körperteile sind der Lehre nach miteinander verbunden. Der menschliche Körper spiegelt sich im Fuss wider – wie auf einer kleinen Landkarte lassen sich dort der Körper und seine Beschwerden erkennen. Demzufolge können durch gezielte Druckmassagen an speziellen Stellen am Fuss körperliche und seelische Beschwerden im restlichen Körper gelöst werden und Selbstheilungskräfte aktivieren.</p></br><p>Einzelne Behandlungen können helfen und das Wohlbefinden im Körper steigern, gegen chronische Beschwerden können regelmässige Massagen aber wirkungsvoller sein.</p></br><p>Die Fussreflexzonentherapie kann bei folgenden Beschwerden eingesetzt werden:</p><ul><li>Gelenkschmerzen</li><li>Wirbelsäulenleiden</li><li>Verspannungen</li><li>Verkrampfungen</li><li>Schlafstörungen</li><li>Durchblutungsstörungen</li><li>Kopfschmerzen</li><li>Migräne</li><li>Kreislaufstörungen</li><li>Verdauungsbeschwerden</li><li>Blasenentzündungen</li><li>Heuschnupfen</li><li>Erkältungen</li><li>Zyklusstörungen</li></ul><p>Die Reflexzonenmassage kann aber auch präventiv eingesetzt werden und eine allgemeine gesundheitliche Stärkung erzielen.</p></br><p>Aber in gewissen Fällen ist es ratsam auf eine Fussreflexmassage zu verzichten. So etwa bei Risikoschwangerschaften, akuten Entzündungen, Fieber oder Psychosen.</p>"
+          bodyRev2="<p>Alle Körperteile sind der Lehre nach miteinander verbunden. Der menschliche Körper spiegelt sich im Fuss wider – wie auf einer kleinen Landkarte lassen sich dort der Körper und seine Beschwerden erkennen. Demzufolge können durch gezielte Druckmassagen an speziellen Stellen am Fuss körperliche und seelische Beschwerden im restlichen Körper gelöst werden und Selbstheilungskräfte aktivieren.</p></br><p>Einzelne Behandlungen können helfen und das Wohlbefinden im Körper steigern, gegen chronische Beschwerden können regelmässige Massagen aber wirkungsvoller sein.</p></br><p>Die Fussreflexzonentherapie kann bei folgenden Beschwerden eingesetzt werden:</p><ul><li>Gelenkschmerzen</li><li>Wirbelsäulenleiden</li><li>Verspannungen</li><li>Verkrampfungen</li><li>Schlafstörungen</li><li>Durchblutungsstörungen</li><li>Kopfschmerzen</li><li>Migräne</li><li>Kreislaufstörungen</li><li>Verdauungsbeschwerden</li><li>Blasenentzündungen</li><li>Heuschnupfen</li><li>Erkältungen</li><li>Zyklusstörungen</li></ul><p>Die Reflexzonenmassage kann aber auch präventiv eingesetzt werden und eine allgemeine gesundheitliche Stärkung erzielen.</p></br><p>Aber in gewissen Fällen ist es ratsam auf eine Fussreflexmassage zu verzichten. So etwa bei Risikoschwangerschaften, akuten Entzündungen, Fieber oder Psychosen.</p>"
         />
         <CardMassage
           massageCardId="lymphdrainage"
@@ -71,15 +71,15 @@ import Footer from "../components/Footer.astro";
           body2="<p>Die Manuelle Lymphdrainage eignet sich vor allem bei Beschwerden wie Schwellungen und Stauungen. Beispiele dafür sind Verstauchungen, Zerrungen, Blutergüsse, Knochenbrüche, Ödeme bei rheumatischen Erkrankungen oder Lymphödeme. Die Drainage regt den Abfluss von Flüssigkeiten an und verhindert gleichzeitig, dass neue Flüssigkeit in das Gewebe gelangt. Schmerzen in der betreffenden Gegend können so gelindert und der Heilungsprozess beschleunigt werden.</p></br><p>Auch Beschwerden wie Wassereinlagerungen zählen zu den typischen Anwendungsgebieten der manuellen Lymphdrainage. Schwangere Frauen und ältere Menschen sind besonders häufig von solchen Einlagerungen in Armen und Beinen betroffen.</p></br><p>Die manuelle Lymphdrainage kommt ausserdem nach Operationen zum Einsatz. Zum Beispiel nach Unfällen, nach der Entfernung der Lymphknoten oder nach zahnärztlichen Eingriffen. Operationsbedingte Schwellungen können mit den sanften Grifftechniken der manuellen Lymphdrainage besonders wirksam behandelt werden.</p></br><p>Auch chronische Erkrankungen im Hals-, Nasen- und Ohrenbereich sowie Gelenkerkrankungen (wie Morbus Sudeck), können mit der manuellen Lymphdrainage therapiert werden.</p></br><p>Hinweis: Bei Beschwerden wie Herzschwäche, Venenthrombose, akuten Ekzemen oder offenen Wunden und ähnlichen Beschwerden, kommt die manuelle Lymphdrainage nur nach Absprache mit dem behandelnden Arzt zum Einsatz.</p>"
         />
         <CardMassage
-          massageCardId="rebalancing"
-          collapseLinkId="collapse6"
-          imgPath1="/img/rebalancingmassage.jpg"
-          href1="#"
-          title1="Rebalancing"
-          body1={[
+          reverseMassageCardId="rebalancing"
+          collapseLinkIdRev="collapse6"
+          imgPathRev="/img/rebalancingmassage2.jpg"
+          hrefRev="#"
+          titleRev="Rebalancing"
+          bodyRev1={[
             "Rebalancing bedeutet wieder ins Gleichgewicht zu gelangen. Rebalancing ist eine ganzheitliche, integrative Massage- und Körpertherapie. Die Methode kombiniert auf einzigartige Weise achtsame Berührung, gezielte manuelle Arbeit am faszialen Bindegewebe (Striche), Gespräche, Gelenklockerungen (Joint Release) sowie die Schulung und Verfeinerung der Körperwahrnehmung durch sogenanntes Körperlesen  erbessern.",
           ]}
-          body2="<p>Durch die tiefgehende strukturelle Faszienbehandlung werden verspannte und verfilzte Bindegewebsverbände gelöst. Schmerzen können sich verändern, der Körper kann sich neu ausrichten und leichter in die Aufrichtung kommen.</p></br><p>Der Bewegungsspielraum erweitert sich, Bewegungsabläufe werden geschmeidiger, und die Körperwahrnehmung wird verfeinert.</p></br><p>So wird eine Neuausrichtung auf allen Ebenen – körperlich, seelisch und geistig – unterstützt, wodurch eine neue äussere und innere Haltung entstehen kann.</p>"
+          bodyRev2="<p>Durch die tiefgehende strukturelle Faszienbehandlung werden verspannte und verfilzte Bindegewebsverbände gelöst. Schmerzen können sich verändern, der Körper kann sich neu ausrichten und leichter in die Aufrichtung kommen.</p></br><p>Der Bewegungsspielraum erweitert sich, Bewegungsabläufe werden geschmeidiger, und die Körperwahrnehmung wird verfeinert.</p></br><p>So wird eine Neuausrichtung auf allen Ebenen – körperlich, seelisch und geistig – unterstützt, wodurch eine neue äussere und innere Haltung entstehen kann.</p>"
       </div>
       <!-- contraindications -->
       <div class="contradict-section">
