--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,89 +18,8 @@ import { Icon } from "astro-icon";
       <h1>Kontakte</h1>
       <div class="address">
         <div class="all-addr-items">
+
           <div class="addr-item1">
-            <div class="icon-text">
-              <Icon name="fa-solid:home" class="addr-icon home-icon" />
-              <div>
-                <div class="addr-place">
-                  <p>Praxisraum</p>
-                  <p>in Weiach</p>
-                </div>
-                <p>
-                  <a
-                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
-                    target="_blank"
-                  >
-                    Im See 3
-                  </a>
-                </p>
-                <p>
-                  <a
-                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
-                    target="_blank"
-                  >
-                    8187 Weiach
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="icon-text">
-              <Icon name="fa-solid:phone-alt" class="addr-icon" />
-              <a href="tel:+41795648109" target="_blank">
-                +41 (0)79 564 81 09</a
-              >
-            </div>
-            <div class="icon-text icon-text-last">
-              <Icon name="fa-solid:envelope" class="addr-icon" />
-              <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
-                elena_schaller@swissonline.ch
-              </a>
-            </div>
-          </div>
-
-          <div class="addr-item2">
-            <div class="icon-text">
-              <Icon name="fa-solid:home" class="addr-icon home-icon" />
-              <div>
-                <div class="addr-place">
-                  <p>Praxis in der Salzgrotte</p>
-                  <a href="https://salzgrotte.ch/offer-prices/" target="_blank">
-                    salzgrotte.ch
-                  </a>
-                </div>
-                <p>
-                  <a
-                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
-                    target="_blank"
-                  >
-                    Lindenstrasse 23
-                  </a>
-                </p>
-                <p>
-                  <a
-                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
-                    target="_blank"
-                  >
-                    8302 Kloten
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="icon-text">
-              <Icon name="fa-solid:phone-alt" class="addr-icon" />
-              <a href="tel:+41795648109" target="_blank">
-                +41 (0)79 564 81 09</a
-              >
-            </div>
-            <div class="icon-text icon-text-last">
-              <Icon name="fa-solid:envelope" class="addr-icon" />
-              <a href="mailto:elena_schaller@swissonline.ch" target="_blank"
-                >elena_schaller@swissonline.ch</a
-              >
-            </div>
-          </div>
-
-          <div class="addr-item3">
             <div class="icon-text">
               <Icon name="fa-solid:home" class="addr-icon home-icon" />
               <div>
@@ -148,8 +67,90 @@ import { Icon } from "astro-icon";
             <div class="icon-text icon-text-last">
               <Icon name="fa-solid:envelope" class="addr-icon" />
               <a href="mailto:elena_schaller@swissonline.ch" target="_blank"
-                >elena_schaller@swissonline.ch</a
+                >elena_schaller@swissonline.ch
+                </a>
+            </div>
+          </div>
+
+          <div class="addr-item2">
+            <div class="icon-text">
+              <Icon name="fa-solid:home" class="addr-icon home-icon" />
+              <div>
+                <div class="addr-place">
+                  <p>Praxisraum</p>
+                  <p>in Weiach</p>
+                </div>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
+                    target="_blank"
+                  >
+                    Im See 3
+                  </a>
+                </p>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
+                    target="_blank"
+                  >
+                    8187 Weiach
+                  </a>
+                </p>
+              </div>
+            </div>
+            <div class="icon-text">
+              <Icon name="fa-solid:phone-alt" class="addr-icon" />
+              <a href="tel:+41795648109" target="_blank">
+                +41 (0)79 564 81 09</a
               >
+            </div>
+            <div class="icon-text icon-text-last">
+              <Icon name="fa-solid:envelope" class="addr-icon" />
+              <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
+                elena_schaller@swissonline.ch
+              </a>
+            </div>
+          </div>
+
+          <div class="addr-item3">
+            <div class="icon-text">
+              <Icon name="fa-solid:home" class="addr-icon home-icon" />
+              <div>
+                <div class="addr-place">
+                  <p>Praxis in der Salzgrotte</p>
+                  <a href="https://salzgrotte.ch/offer-prices/" target="_blank">
+                    salzgrotte.ch
+                  </a>
+                </div>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
+                    target="_blank"
+                  >
+                    Lindenstrasse 23
+                  </a>
+                </p>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
+                    target="_blank"
+                  >
+                    8302 Kloten
+                  </a>
+                </p>
+              </div>
+            </div>
+            <div class="icon-text">
+              <Icon name="fa-solid:phone-alt" class="addr-icon" />
+              <a href="tel:+41795648109" target="_blank">
+                +41 (0)79 564 81 09</a
+              >
+            </div>
+            <div class="icon-text icon-text-last">
+              <Icon name="fa-solid:envelope" class="addr-icon" />
+              <a href="mailto:elena_schaller@swissonline.ch" target="_blank"
+                >elena_schaller@swissonline.ch
+                </a>
             </div>
           </div>
         </div>
