--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,17 @@ import { Icon } from "astro-icon";
     <!-- contacts -->
     <div id="contacts" class="contacts">
       <h1>Kontakte</h1>
+      <div class="addr-place">
+                  <p>
+                    <a
+                      href="https://www.instagram.com/schallerelena/"
+                      target="_blank"
+                    >
+                      Instagram
+                    </a>
+                  </p>
+                </div>
+                
       <div class="address">
         <div class="all-addr-items">
 
