Preise angepasst und neue Massagen hinzugefügt, Adressen & Instagram, ZSR-Nr.

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -81,6 +81,17 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
               elena_schaller@swissonline.ch
             </a>
           </div>
+
+          <div class="addr-place">
+                  <p>
+                    <a
+                      href="https://www.instagram.com/schallerelena/"
+                      target="_blank"
+                    >
+                      Instagram
+                    </a>
+                  </p>
+           </div>
         </div>
 
         <iframe
@@ -124,6 +135,18 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
               elena_schaller@swissonline.ch
             </a>
           </div>
+
+          <div class="addr-place">
+                  <p>
+                    <a
+                      href="https://www.instagram.com/schallerelena/"
+                      target="_blank"
+                    >
+                      Instagram
+                    </a>
+                  </p>
+           </div>
+           
         </div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2692.241230708054!2d8.4255598!3d47.5630947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479071c87e214bb5%3A0x1e3dded9c0a4b13d!2sIm%20See%203%2C%208187%20Weiach!5e0!3m2!1sru!2sch!4v1751213417121!5m2!1sru!2sch"
@@ -165,9 +188,21 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
           <div class="icon-text icon-text-last">
             <Icon name="fa-solid:envelope" class="addr-icon" />
             <a href="mailto:ielena_schaller@swissonline.ch" target="_blank"
-              >elena_schaller@swissonline.ch</a
-            >
+              >elena_schaller@swissonline.ch
+              </a>
           </div>
+
+          <div class="addr-place">
+                  <p>
+                    <a
+                      href="https://www.instagram.com/schallerelena/"
+                      target="_blank"
+                    >
+                      Instagram
+                    </a>
+                  </p>
+           </div>
+        
         </div>
         <iframe
           loading="lazy"
