--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import { Icon } from "astro-icon";
     <!-- contacts -->
     <div id="contacts" class="contacts">
       <h1>Kontakte</h1>
+      
       <div class="addr-place">
                   <p>
                     <a
@@ -25,7 +26,7 @@ import { Icon } from "astro-icon";
                       Instagram
                     </a>
                   </p>
-                </div>
+      </div>
                 
       <div class="address">
         <div class="all-addr-items">
@@ -39,16 +40,6 @@ import { Icon } from "astro-icon";
                   <a href="https://dopaminmassagekloten.ch/" target="_blank">
                     dopaminmassagekloten.ch
                   </a>
-                </div>
-                <div class="addr-place">
-                  <p>
-                    <a
-                      href="https://www.instagram.com/schallerelena/"
-                      target="_blank"
-                    >
-                      Instagram
-                    </a>
-                  </p>
                 </div>
 
                 <p>
@@ -215,9 +206,12 @@ import { Icon } from "astro-icon";
         <div>
           <h2>In den Praxisen in Kloten</h2>
           <div class="prices">
-            <p>Klassische Massage ab 120 CHF pro 60 Minuten</p>
-            <p>Entspannungsmassage ab 120 CHF pro 60 Minuten</p>
-            <p>Sportmassage ab 120 CHF pro 60 Minuten</p>
+            <p>Klassische Massage ab 128 CHF pro 60 Minuten</p>
+            <p>Entspannungsmassage ab 128 CHF pro 60 Minuten</p>
+            <p>Sportmassage ab 128 CHF pro 60 Minuten</p>
+            <p>Fussreflexzonen Massage ab 128 CHF pro 60 Minuten</p>
+            <p>Manuelle Lymphdrainage ab 128 CHF pro 60 Minuten</p>
+            <p>Rebalancing ab 128 CHF pro 60 Minuten</p>
           </div>
         </div>
         <div>
@@ -226,6 +220,9 @@ import { Icon } from "astro-icon";
             <p>Klassische Massage 100 CHF pro 60 Minuten</p>
             <p>Entspannungsmassage 100 CHF pro 60 Minuten</p>
             <p>Sportmassage 100 CHF pro 60 Minuten</p>
+            <p>Fussreflexzonen Massage ab 100 CHF pro 60 Minuten</p>
+            <p>Manuelle Lymphdrainage ab 100 CHF pro 60 Minuten</p>
+            <p>Rebalancing ab 100 CHF pro 60 Minuten</p>
           </div>
         </div>
       </div>
@@ -235,7 +232,7 @@ import { Icon } from "astro-icon";
       <p>
         Ein Grossteil der Krankenkassen übernimmt im Rahmen einer
         Zusatzversicherung die Kosten einer Massage voll oder zum Teil. Bitte
-        erkundigen Sie sich vor der Behandlung bei Ihrer Versicherung.
+        erkundigen Sie sich vor der Behandlung bei Ihrer Versicherung. Sie können dazu folgende ZSR-Nummer angeben: X916164
       </p>
     </div>
     <!-- Reviews -->
