--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -82,8 +82,8 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             </a>
           </div>
 
-          <div class="addr-place">
-                  <p>
+          <div class="icon-text icon-text-last">
+            <Icon name="fa-brands:instagram" class="addr-icon" />
                     <a
                       href="https://www.instagram.com/schallerelena/"
                       target="_blank"
