--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -78,19 +78,12 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
           <div class="icon-text icon-text-last">
             <Icon name="fa-solid:envelope" class="addr-icon" />
             <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
-              elena_schaller@swissonline.ch
-            </a>
+              elena_schaller@swissonline.ch</a>
           </div>
-
           <div class="icon-text icon-text-last">
             <Icon name="fa-brands:instagram" class="addr-icon" />
-                    <a
-                      href="https://www.instagram.com/schallerelena/"
-                      target="_blank"
-                    >
-                      Instagram
-                    </a>
-                  </p>
+                    <a href="https://www.instagram.com/schallerelena/" target="_blank">
+                      Instagram</a>
            </div>
         </div>
 
