--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -129,15 +129,10 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             </a>
           </div>
 
-          <div class="addr-place">
-                  <p>
-                    <a
-                      href="https://www.instagram.com/schallerelena/"
-                      target="_blank"
-                    >
-                      Instagram
-                    </a>
-                  </p>
+          <div class="icon-text icon-text-last">
+            <Icon name="fa-brands:instagram" class="addr-icon" />
+                    <a href="https://www.instagram.com/schallerelena/" target="_blank">
+                      Instagram</a>
            </div>
            
         </div>
@@ -176,24 +171,21 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
           </div>
           <div class="icon-text">
             <Icon name="fa-solid:phone-alt" class="addr-icon" />
-            <a href="tel:+41795648109" target="_blank"> +41 (0)79 564 81 09</a>
+            <a href="tel:+41795648109" target="_blank"> +41 (0)79 564 81 09
+            </a>
           </div>
           <div class="icon-text icon-text-last">
             <Icon name="fa-solid:envelope" class="addr-icon" />
             <a href="mailto:ielena_schaller@swissonline.ch" target="_blank"
               >elena_schaller@swissonline.ch
-              </a>
+            </a>
           </div>
 
-          <div class="addr-place">
-                  <p>
-                    <a
-                      href="https://www.instagram.com/schallerelena/"
-                      target="_blank"
-                    >
+          <div class="icon-text icon-text-last">
+            <Icon name="fa-brands:instagram" class="addr-icon" />
+                    <a href="https://www.instagram.com/schallerelena/" target="_blank">
                       Instagram
                     </a>
-                  </p>
            </div>
         
         </div>
