Home Behandlungen hinzugefügt, Fusszeile, Reviews

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,7 @@
       </a>
     </div>
 
-    <p>Krankenkassen anerkannt (Zusatzversicherung)</p>
+    <p>Krankenkassen anerkannt (Zusatzversicherung) ZSR-Nummer: X916164</p>
   </div>
 
   <p class="copyright">
