--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -197,6 +197,24 @@ import { Icon } from "astro-icon";
           title="Sportmassage"
           body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen."
         />
+        <Card
+          imgPath="img/Fussreflexzonenmassage.jpg"
+          href="/massage/#fussrefelx"
+          title="Fussreflexzonen Massage"
+          body="Die Fussmassage kann das allgemeine Wohlbefinden im ganzen Körper verbessern. Das liegt daran, dass die Reflexzonentherapie entspannend wirkt und Blockaden im ganzen Körper lösen kann. Gerade bei schlechter Stimmung oder psychischen Belastungen zeigt sich die Reflexzonenmassage deshalb als positiv."
+        />
+        <Card
+          imgPath="img/lymphdrainage.jpg"
+          href="/massage/#lymphdrainage"
+          title="Manuelle Lymphdrainage"
+          body="Die manuelle Lymphdrainage ist keine klassische Massage, sondern vielmehr eine Drainage, welche die Funktion des Lymphsystems positiv beeinflusst. Das genaue Ziel der manuellen Lymphdrainage ist die Entstauung des geschwollenen Gewebes. Durch sanfte, oberflächliche Anwendungen, werden bei der Therapie die Lymphflüssigkeiten verschoben und der Lymphabfluss aktiviert."
+        />
+        <Card
+          imgPath="img/rebalancingmassage2.jpg"
+          href="/massage/#rebalancing"
+          title="Rebalancing"
+          body="Rebalancing ist eine ganzheitliche, integrative Massage- und Körpertherapie. Die Methode kombiniert auf einzigartige Weise achtsame Berührung, gezielte manuelle Arbeit am faszialen Bindegewebe (Striche), Gespräche, Gelenklockerungen (Joint Release) sowie die Schulung und Verfeinerung der Körperwahrnehmung durch sogenanntes Körperlesen erbessern."
+        />
       </div>
     </div>
     <!-- Prices -->
