Home - Behnaldungen, Fusszeile

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,8 @@
       </a>
     </div>
 
-    <p>Krankenkassen anerkannt (Zusatzversicherung) ZSR-Nummer: X916164</p>
+    <p>Krankenkassen anerkannt (Zusatzversicherung)</p> 
+    <p>ZSR-Nummer: X916164</p>
   </div>
 
   <p class="copyright">
