--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -195,7 +195,7 @@ import { Icon } from "astro-icon";
           imgPath="img/massage3-opt.jpg"
           href="/massage/#sport"
           title="Sportmassage"
-          body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen."
+          body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen.</p>"
         />
         <Card
           imgPath="img/Fussreflexzonenmassage.jpg"
@@ -204,7 +204,7 @@ import { Icon } from "astro-icon";
           body="Die Fussmassage kann das allgemeine Wohlbefinden im ganzen Körper verbessern. Das liegt daran, dass die Reflexzonentherapie entspannend wirkt und Blockaden im ganzen Körper lösen kann. Gerade bei schlechter Stimmung oder psychischen Belastungen zeigt sich die Reflexzonenmassage deshalb als positiv."
         />
         <Card
-          imgPath="img/lymphdrainage.jpg"
+          imgPath="img/lymphdrainage.png"
           href="/massage/#lymphdrainage"
           title="Manuelle Lymphdrainage"
           body="Die manuelle Lymphdrainage ist keine klassische Massage, sondern vielmehr eine Drainage, welche die Funktion des Lymphsystems positiv beeinflusst. Das genaue Ziel der manuellen Lymphdrainage ist die Entstauung des geschwollenen Gewebes. Durch sanfte, oberflächliche Anwendungen, werden bei der Therapie die Lymphflüssigkeiten verschoben und der Lymphabfluss aktiviert."
